--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -40,6 +40,6 @@ RSpec/DescribeClass:
     - "spec/views/**/*"
     - "spec/ability/*"
 
-Layout/AlignHash:
+Layout/HashAlignment:
   EnforcedHashRocketStyle: table
   EnforcedColonStyle: table
