Tweak cops list and rerun autocorrect

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,4 @@
-inherit_from: .rubocop_todo.yml
-
 require: rubocop-rspec
-
 
 inherit_mode:
   merge:
@@ -45,3 +42,29 @@ RSpec/DescribeClass:
 Layout/AlignHash:
   EnforcedHashRocketStyle: table
   EnforcedColonStyle: table
+
+# Style
+
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/factories/*'
+
+Metrics/LineLength:
+  Enabled: True
+  Max: 100
+  Exclude:
+    - 'spec/factories/*'
+
+
+Style/TrailingCommaInArguments:
+  EnforcedStyleForMultiline: consistent_comma
+
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: consistent_comma
+
+Style/SymbolArray:
+  Enabled: false
+
+# TODO: Enable after upgrading rubocop
+# Style/StringConcatenation:
+#   Enabled: True
