Temporarily remove pg_query - doesnt install on elasticbeanstalk

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,8 @@ build-iPhoneSimulator/
 
 # Ignore Javascript package binaries
 /node_modules
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
